--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "recharts": "^2.8.0",
-    "axios": "^1.6.0"
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
