Refactor Profile, Resources, and Support Circle components; enhance UI with improved styles and functionality
- Updated Profile component to streamline data fetching and user experience.
- Enhanced Resources component with new links and improved layout.
- Refactored Support Circle to include delete functionality for contacts.
- Added Breathing Exercise and Journal History components with dedicated styles.
- Introduced new CSS styles for better visual consistency across components.
- Implemented responsive design adjustments for various elements.
- Improved accessibility features, including aria-labels for buttons.

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "twilio": "^5.10.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
