--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "recharts": "^2.15.4"
+    "recharts": "^2.15.4",
+    "twilio": "^5.10.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
