Replace Twilio SMS with Nodemailer email notifications
This commit replaces the Twilio SMS notification system with an email-based
notification system using Nodemailer and Mailgun.

Key changes:
- Added emailService.js for email sending logic via Mailgun SMTP
- Updated support circle contacts to use email addresses instead of phone numbers
- Modified SupportCircle UI components to collect/display emails
- Updated Dashboard and EmergencyNotification to show email-based notifications
- Removed Twilio dependencies and updated to Nodemailer
- Enhanced mood insights algorithm with trend analysis and trigger detection
- Updated README with email setup instructions
- Bumped Vite to v7.2.6 in the root package

Backend changes:
- SupportContactSchema now stores 'email' instead of 'phone'
- /api/need-support endpoint now sends emails via emailService
- Support circle endpoints handle email data

Frontend changes:
- SupportCircle form now accepts email instead of phone number
- EmergencyNotification displays email addresses
- Updated CSS class names from 'form-input-phone' to 'form-input-email'
- UI text updated to reference email notifications

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
-    "twilio": "^5.10.6"
+    "nodemailer": "^7.0.11"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
