--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
-    "recharts": "^2.15.4",
-    "twilio": "^5.10.6"
+    "recharts": "^2.15.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -27,6 +26,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^4.5.0"
+    "vite": "^7.2.6"
   }
 }
